syntax = "proto3";

package logger;
option go_package = "logger/loggerpb";

// data model (for now, logs are just
// plaintext messages)

message LogRecord {
  string msg = 1;
  string emitter = 2;
  bool success = 3;
}

// request format: client and emitter
// names and desired baudrate

message LogStreamRequest {
  string emitter = 1;
  string client = 2;
  uint32 baudrate = 3;
  int64 timeout = 4;
}

message EmptyRequest {}

service LoggerService {
  // server streaming
  rpc GetLogStream(LogStreamRequest) returns (stream LogRecord);
  rpc StopLogStream(LogStreamRequest) returns (LogRecord);
  rpc GetAccessibleStreams(EmptyRequest) returns (stream LogRecord);
}
